--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "phonegap-plugin-push",
   "description": "Register and receive push notifications.",
   "types": "./types/index.d.ts",
-  "version": "2.3.0",
+  "version": "3.0.0",
   "homepage": "http://github.com/phonegap/phonegap-plugin-push#readme",
   "repository": {
     "type": "git",
@@ -61,6 +61,11 @@
         "cordova-ios": ">=4.5.0",
         "cordova-android": ">=7.1.0",
         "cordova": ">=7.1.0"
+      },
+      "3.0.0": {
+        "cordova-ios": ">=5.1.1",
+        "cordova-android": ">=9.0.0",
+        "cordova": ">=9.0.0"
       }
     }
   },
