--- a/plugin.xml
+++ b/plugin.xml
@@ -3,7 +3,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android" 
   xmlns:amazon="http://schemas.android.com/apk/lib/com.amazon.device.ads" 
   xmlns:rim="http://www.blackberry.com/ns/widgets" 
-  id="phonegap-plugin-push" version="2.3.0">
+  id="phonegap-plugin-push" version="3.0.0">
   <name>PushPlugin</name>
   <description>    This plugin allows your application to receive push notifications on Android, iOS and Windows devices.    Android uses Firebase Cloud Messaging.    iOS uses Apple APNS Notifications.    Windows uses Microsoft WNS Notifications.  </description>
   <license>MIT</license>
@@ -11,9 +11,9 @@
     <clobbers target="PushNotification"/>
   </js-module>
   <engines>
-    <engine name="cordova" version=">=7.1.0"/>
-    <engine name="cordova-android" version=">=7.1.0"/>
-    <engine name="cordova-ios" version=">=4.5.0"/>
+    <engine name="cordova" version=">=9.0.0"/>
+    <engine name="cordova-android" version=">=9.0.0"/>
+    <engine name="cordova-ios" version=">=5.1.1"/>
   </engines>
   <platform name="android">
     <config-file target="res/xml/config.xml" parent="/*">
@@ -42,12 +42,15 @@
         </intent-filter>
       </service>
     </config-file>
-    <preference name="ANDROID_SUPPORT_V13_VERSION" default="27.+"/>
-    <preference name="FCM_VERSION" default="17.0.+"/>
+    <config-file target="config.xml" parent="/*">
+      <preference name="GradlePluginGoogleServicesEnabled" value="true" />
+      <preference name="GradlePluginGoogleServicesVersion" value="4.2.0" />
+    </config-file>
+    <preference name="ANDROID_SUPPORT_V13_VERSION" default="28.0.0"/>
+    <preference name="FCM_VERSION" default="20.+"/>
     <framework src="com.android.support:support-v13:$ANDROID_SUPPORT_V13_VERSION"/>
     <framework src="me.leolin:ShortcutBadger:1.1.17@aar"/>
     <framework src="com.google.firebase:firebase-messaging:$FCM_VERSION"/>
-    <dependency id="cordova-support-google-services" version="~1.3.1"/>
     <dependency id="phonegap-plugin-multidex" version="~1.0.0"/>
     <source-file src="src/android/com/adobe/phonegap/push/FCMService.java" target-dir="src/com/adobe/phonegap/push/"/>
     <source-file src="src/android/com/adobe/phonegap/push/PushConstants.java" target-dir="src/com/adobe/phonegap/push/"/>
@@ -86,7 +89,7 @@
     <source-file src="src/ios/PushPlugin.m"/>
     <header-file src="src/ios/AppDelegate+notification.h"/>
     <header-file src="src/ios/PushPlugin.h"/>
-    <framework src="FirebaseMessaging" type="podspec" spec="~> 2.0.0"/>
+    <framework src="FirebaseMessaging" type="podspec" spec="~> 4.0"/>
     <framework src="PushKit.framework"/>
   </platform>
   <platform name="windows">
