--- a/plugin.xml
+++ b/plugin.xml
@@ -85,13 +85,8 @@
     <source-file src="src/ios/PushPlugin.m"/>
     <header-file src="src/ios/AppDelegate+notification.h"/>
     <header-file src="src/ios/PushPlugin.h"/>
+    <framework src="FirebaseMessaging" type="podspec" spec="~> 6.31.0"/>
     <framework src="PushKit.framework"/>
-    <podspec>
-      <config></config>
-      <pods use-frameworks="true">
-        <pod name="Firebase/Messaging" spec="~> 6.31.0" />
-      </pods>
-    </podspec>
   </platform>
   <platform name="windows">
     <hook type="after_plugin_install" src="hooks/windows/setToastCapable.js"/>
