--- a/plugin.xml
+++ b/plugin.xml
@@ -85,6 +85,7 @@
     <source-file src="src/ios/PushPlugin.m"/>
     <header-file src="src/ios/AppDelegate+notification.h"/>
     <header-file src="src/ios/PushPlugin.h"/>
+    <framework src="FirebaseMessaging" type="podspec" spec="~> 4.0"/>
     <framework src="PushKit.framework"/>
   </platform>
   <platform name="windows">
